Cleared the final warnings